// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard shoudl increment the counter 1`] = `
<div
  className="productCard undefined"
  id="1"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    1
  </button>
</div>
`;

exports[`ProductCard should show correctly 1`] = `
<div
  className="productCard undefined"
  id="1"
>
  <h1>
    Hola
  </h1>
</div>
`;
